examples/core/errors/syntax_recovery/01_trailing_operator.output.txt

error[E0102]: Undefined variable
  ┌─ input:4:1
2 │ // The parser should recover after the unexpected + operator
3 │ // and potentially treat this as just the variable x
4 │ x +
    ^
5 │ 
  = hint: Check variable name and scope

